compilador/src/parser/MancoParser.java
// Generated from Manco.g4 by ANTLR 4.7.1
package parser;

	import java.util.Scanner;
	import datastructures.Symbol;
	import datastructures.Variable;
	import datastructures.SymbolTable;
	import exceptions.SemanticException;
	import java.util.ArrayList;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class MancoParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, MAIOR=13, MENOR=14, IGUAL=15, DIF=16, MAIORIGUAL=17, 
		MENORIGUAL=18, SOM=19, SUB=20, MUL=21, DIV=22, AP=23, FP=24, SC=25, ATTR=26, 
		VIR=27, ACH=28, FCH=29, ID=30, PALAVRAS=31, NUMBER=32, WS=33;
	public static final int
		RULE_prog = 0, RULE_bloco = 1, RULE_cmd = 2, RULE_cmddecl = 3, RULE_declaravar = 4, 
		RULE_tipo = 5, RULE_cmdleitura = 6, RULE_cmdescrita = 7, RULE_texto = 8, 
		RULE_cmdattrib = 9, RULE_cmdpara = 10, RULE_cmdenquanto = 11, RULE_cmdfacaenquanto = 12, 
		RULE_cmdsesenao = 13, RULE_expr = 14, RULE_termo = 15, RULE_op = 16, RULE_oprel = 17;
	public static final String[] ruleNames = {
		"prog", "bloco", "cmd", "cmddecl", "declaravar", "tipo", "cmdleitura", 
		"cmdescrita", "texto", "cmdattrib", "cmdpara", "cmdenquanto", "cmdfacaenquanto", 
		"cmdsesenao", "expr", "termo", "op", "oprel"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'programa'", "'fimprog'", "'numero'", "'texto'", "'leia'", "'escreva'", 
		"'para'", "'++'", "'enquanto'", "'faca'", "'se'", "'senao'", "'>'", "'<'", 
		"'=='", "'!='", "'>='", "'<='", "'+'", "'-'", "'*'", "'/'", "'('", "')'", 
		"';'", "'='", "','", "'{'", "'}'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, "MAIOR", "MENOR", "IGUAL", "DIF", "MAIORIGUAL", "MENORIGUAL", "SOM", 
		"SUB", "MUL", "DIV", "AP", "FP", "SC", "ATTR", "VIR", "ACH", "FCH", "ID", 
		"PALAVRAS", "NUMBER", "WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Manco.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


		Boolean sin;
		Boolean resp = true;
		String teste;
	 	String contaSt = "";
	 	String logicSt = "";
		String  l;
		int 	igual;
		int n;	
		private int _tipo;
		private String _varName;
		private String _varValue;
		private String chave;
		private String chaveR;
		private SymbolTable symbolTable = new SymbolTable();
		private Symbol symbol;
		private Variable variable;
		
		public void verificaID(String id){
			if(!symbolTable.exists(id)){
				throw new SemanticException("Symbol " +id+ " not declared!!!");
			}
		}
		
		public void atribuirValor (String id, Variable newVariable){
			symbolTable.mudarValor(id,newVariable);
		}

	public MancoParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgContext extends ParserRuleContext {
		public BlocoContext bloco() {
			return getRuleContext(BlocoContext.class,0);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MancoListener ) ((MancoListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MancoListener ) ((MancoListener)listener).exitProg(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(36);
			match(T__0);
			setState(37);
			bloco();
			setState(38);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlocoContext extends ParserRuleContext {
		public List<CmdContext> cmd() {
			return getRuleContexts(CmdContext.class);
		}
		public CmdContext cmd(int i) {
			return getRuleContext(CmdContext.class,i);
		}
		public BlocoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bloco; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MancoListener ) ((MancoListener)listener).enterBloco(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MancoListener ) ((MancoListener)listener).exitBloco(this);
		}
	}

	public final BlocoContext bloco() throws RecognitionException {
		BlocoContext _localctx = new BlocoContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_bloco);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(41); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(40);
				cmd();
				}
				}
				setState(43); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__2) | (1L << T__3) | (1L << T__4) | (1L << T__5) | (1L << T__6) | (1L << T__8) | (1L << T__9) | (1L << T__10) | (1L << ID))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CmdContext extends ParserRuleContext {
		public CmddeclContext cmddecl() {
			return getRuleContext(CmddeclContext.class,0);
		}
		public CmdleituraContext cmdleitura() {
			return getRuleContext(CmdleituraContext.class,0);
		}
		public CmdescritaContext cmdescrita() {
			return getRuleContext(CmdescritaContext.class,0);
		}
		public CmdattribContext cmdattrib() {
			return getRuleContext(CmdattribContext.class,0);
		}
		public CmdsesenaoContext cmdsesenao() {
			return getRuleContext(CmdsesenaoContext.class,0);
		}
		public CmdparaContext cmdpara() {
			return getRuleContext(CmdparaContext.class,0);
		}
		public CmdenquantoContext cmdenquanto() {
			return getRuleContext(CmdenquantoContext.class,0);
		}
		public CmdfacaenquantoContext cmdfacaenquanto() {
			return getRuleContext(CmdfacaenquantoContext.class,0);
		}
		public CmdContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cmd; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MancoListener ) ((MancoListener)listener).enterCmd(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MancoListener ) ((MancoListener)listener).exitCmd(this);
		}
	}

	public final CmdContext cmd() throws RecognitionException {
		CmdContext _localctx = new CmdContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_cmd);
		try {
			setState(53);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__2:
			case T__3:
				enterOuterAlt(_localctx, 1);
				{
				setState(45);
				cmddecl();
				}
				break;
			case T__4:
				enterOuterAlt(_localctx, 2);
				{
				setState(46);
				cmdleitura();
				}
				break;
			case T__5:
				enterOuterAlt(_localctx, 3);
				{
				setState(47);
				cmdescrita();
				}
				break;
			case ID:
				enterOuterAlt(_localctx, 4);
				{
				setState(48);
				cmdattrib();
				}
				break;
			case T__10:
				enterOuterAlt(_localctx, 5);
				{
				setState(49);
				cmdsesenao();
				}
				break;
			case T__6:
				enterOuterAlt(_localctx, 6);
				{
				setState(50);
				cmdpara();
				}
				break;
			case T__8:
				enterOuterAlt(_localctx, 7);
				{
				setState(51);
				cmdenquanto();
				}
				break;
			case T__9:
				enterOuterAlt(_localctx, 8);
				{
				setState(52);
				cmdfacaenquanto();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CmddeclContext extends ParserRuleContext {
		public List<DeclaravarContext> declaravar() {
			return getRuleContexts(DeclaravarContext.class);
		}
		public DeclaravarContext declaravar(int i) {
			return getRuleContext(DeclaravarContext.class,i);
		}
		public CmddeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cmddecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MancoListener ) ((MancoListener)listener).enterCmddecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MancoListener ) ((MancoListener)listener).exitCmddecl(this);
		}
	}

	public final CmddeclContext cmddecl() throws RecognitionException {
		CmddeclContext _localctx = new CmddeclContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_cmddecl);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(56); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(55);
					declaravar();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(58); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclaravarContext extends ParserRuleContext {
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public List<TerminalNode> ID() { return getTokens(MancoParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(MancoParser.ID, i);
		}
		public TerminalNode SC() { return getToken(MancoParser.SC, 0); }
		public List<TerminalNode> VIR() { return getTokens(MancoParser.VIR); }
		public TerminalNode VIR(int i) {
			return getToken(MancoParser.VIR, i);
		}
		public DeclaravarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaravar; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MancoListener ) ((MancoListener)listener).enterDeclaravar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MancoListener ) ((MancoListener)listener).exitDeclaravar(this);
		}
	}

	public final DeclaravarContext declaravar() throws RecognitionException {
		DeclaravarContext _localctx = new DeclaravarContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_declaravar);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(60);
			tipo();
			setState(61);
			match(ID);


			if(resp){
										_varName = _input.LT(-1).getText();
										_varValue = null;
										variable = new Variable(_varName, _tipo, _varValue);
								
										if (!symbolTable.exists(_varName)){
											symbolTable.add(variable);
											System.out.println("Variavel declarada: "+variable);
										}
										else{
											throw new SemanticException("Symbol " + _varName + " already declared" );
										}
			}
								   
			setState(68);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==VIR) {
				{
				{
				setState(63);
				match(VIR);
				setState(64);
				match(ID);

				if(resp){
											_varName = _input.LT(-1).getText();
											_varValue = null;
											variable = new Variable(_varName, _tipo, _varValue);
									
											if (!symbolTable.exists(_varName)){
												symbolTable.add(variable);
												System.out.println("Variavel declarada: "+variable);
											}
											else{
												throw new SemanticException("Symbol " + _varName + " already declared" );
											}
				}
									   
				}
				}
				setState(70);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(71);
			match(SC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TipoContext extends ParserRuleContext {
		public TipoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tipo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MancoListener ) ((MancoListener)listener).enterTipo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MancoListener ) ((MancoListener)listener).exitTipo(this);
		}
	}

	public final TipoContext tipo() throws RecognitionException {
		TipoContext _localctx = new TipoContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_tipo);
		try {
			setState(77);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__2:
				enterOuterAlt(_localctx, 1);
				{
				setState(73);
				match(T__2);
				 
				if(resp){
										_tipo = Variable.NUMBER;
				}
										
				}
				break;
			case T__3:
				enterOuterAlt(_localctx, 2);
				{
				setState(75);
				match(T__3);
				 
				if(resp){
										_tipo = Variable.TEXT ;
				}
											
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CmdleituraContext extends ParserRuleContext {
		public TerminalNode AP() { return getToken(MancoParser.AP, 0); }
		public TerminalNode ID() { return getToken(MancoParser.ID, 0); }
		public TerminalNode FP() { return getToken(MancoParser.FP, 0); }
		public TerminalNode SC() { return getToken(MancoParser.SC, 0); }
		public CmdleituraContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cmdleitura; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MancoListener ) ((MancoListener)listener).enterCmdleitura(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MancoListener ) ((MancoListener)listener).exitCmdleitura(this);
		}
	}

	public final CmdleituraContext cmdleitura() throws RecognitionException {
		CmdleituraContext _localctx = new CmdleituraContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_cmdleitura);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(79);
			match(T__4);
			setState(80);
			match(AP);
			setState(81);
			match(ID);
			 
			if(resp){
									chave = _input.LT(-1).getText();
									verificaID(chave);
									
									Scanner ler = new Scanner(System.in);
									
									_tipo =symbolTable.getTipo(chave);
									
										if(_tipo == 0){
												n = ler.nextInt();
												l = Integer.toString(n);								//converte para String o valor de n 
												variable = new Variable(chave, _tipo, l);
												atribuirValor (chave, variable);
										}else{
												l = ler.nextLine();
												variable = new Variable(chave, _tipo, l);
												atribuirValor (chave, variable);
										}	
			}
						   
			setState(83);
			match(FP);
			setState(84);
			match(SC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CmdescritaContext extends ParserRuleContext {
		public TerminalNode AP() { return getToken(MancoParser.AP, 0); }
		public TextoContext texto() {
			return getRuleContext(TextoContext.class,0);
		}
		public TerminalNode FP() { return getToken(MancoParser.FP, 0); }
		public TerminalNode SC() { return getToken(MancoParser.SC, 0); }
		public CmdescritaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cmdescrita; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MancoListener ) ((MancoListener)listener).enterCmdescrita(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MancoListener ) ((MancoListener)listener).exitCmdescrita(this);
		}
	}

	public final CmdescritaContext cmdescrita() throws RecognitionException {
		CmdescritaContext _localctx = new CmdescritaContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_cmdescrita);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(86);
			match(T__5);
			setState(87);
			match(AP);
			setState(88);
			texto();
			setState(89);
			match(FP);
			setState(90);
			match(SC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
